fix candidate name wrapping on mobile

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1565,6 +1565,7 @@ p.about {
   .cand-name {
     background-color: transparent;
     padding: 0 0 20px 0;
+    width: auto;
   }
   .endorsement {
     float: none;
